// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expeneses summary with 1 expense 1`] = `
<div>
  <h1>
    Viendo 
    1
     
    gasto
    , el total es:  
    2,35 €
  </h1>
</div>
`;

exports[`should correctly render expeneses summary with multiple expense 1`] = `
<div>
  <h1>
    Viendo 
    23
     
    gastos
    , el total es:  
    32 432,22 €
  </h1>
</div>
`;
